# asperitas--RAG-agent

./: .editorconfig  .gitattributes  .gitignore  AGENTS.md  CHECKPOINT_MVP_002.md  CODEX_FIRST_PROMPT.txt  CODEX_VERIFY_PROMPT.txt  CONTRIBUTING.md  QUICKSTART_STEP_BY_STEP.md  README.md  README_START_HERE.md  SECURITY.md  gitcore.md  pyproject.toml  requirements-streamlit.txt  requirements.txt  sitecustomize.py
.agents/: AGENTS.md  SKILL_CONTRACT.md  skill-contract.schema.json
.codex/: config.toml
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: audit_closeout.md  mvp_task.md  v1_5_task.yml
.github/workflows/: ci.yml  codeql.yml  dependency-review.yml  exact-head-certification.yml  quality-gates.yml
00_ADMIN/: confidentiality_policy.md  decision_log.md  file_inventory.csv  file_inventory_generated.csv  metadata.csv  metadata_schema.yaml  source_priority_policy.md  source_registry.csv  source_registry.jsonl
00_ADMIN/source_registries/: active_prompt_source_registry.csv  asperitas_agent_source_registry_400plus.csv  asperitas_agent_source_registry_400plus.xlsx  asperitas_codex_source_registry_382_targets.xlsx  benchmark_source_registry.csv  external_benchmark_source_registry.csv  external_benchmark_source_registry.schema.json
01_RAW_SOURCES/P0_ACTIVE_PROMPT/: README.md  (+4 more)
02_SOURCE_REGISTRY/: README.md  source_registry.example.json  source_registry.schema.json
05_EVALS/: external_benchmark_eval_cases.jsonl  prompt_lint_checklist_v10_4.md
06_CODEX_HANDOFF/: codex_review_only_template_v10_4.md  codex_task_template_v10_4.md
06_RUNBOOKS/: external_source_acquisition_runbook.md
apps/: internal_dogfood_app.py
asperitas_agent/: __init__.py
data/: source_registry.csv
docs/: AGENTS_MIGRATION_v10_3_to_v10_4.md  AGENTS_v11_0.md  AGENT_ARCHITECTURE.md  AI_DEVELOPMENT_OS.md  AOS_SOURCE_POLICY.md  ASPERITAS_PROJECT_SOURCE_CONSTITUTION_v11_0_KR.md  BENCHMARK_ADAPTATION_REGISTRY.md  CHATGPT_PROJECT_INSTRUCTIONS_v11_0.md  CODEX_CODING_PERFORMANCE_MAX_LAYER.md  CODEX_IMPLEMENTATION_PROMPT_v11_0.md  CODEX_NEXT_PROMPT_CODING_PERFORMANCE_MAX.md  CODEX_NEXT_PROMPT_P0_PLUS_AI_LEAD_LAYER.md  CODEX_NEXT_PROMPT_V11_1_REPO_ALIGNMENT.md  CODEX_NEXT_PROMPT_WEB_PRODUCTIZATION.md  CODEX_OPS_PROMPTS.md  CODEX_TASK_PROMPTS.md  CURRENT_STATE_AND_PERFORMANCE_ROADMAP_2026_07_11.md  DB_CHUNKING_RUNBOOK.md  DECISION_LOG_SCHEMA.md  DEVELOPMENT_PROCESS_V11_1_SOURCE_SYNC.md  DEV_FOUNDATION_OPEN_SOURCE_ADDITIONS.md  DOCUMENT_HYGIENE_AUDIT_2026_07_13.md  ELITE_ENGINEERING_BACKLOG.md  EVALS.md  EXACT_HEAD_CERTIFICATION.md  FAILURE_MODES.md  FRONTIER_AGENT_WORKFLOW_BENCHMARKS.md  IDEAL_REPO_STRUCTURE_V11_1.md  MVP004_BASELINE_METRICS.md  MVP004_CLOSURE_SUMMARY.md  MVP004_FINAL_QUALITY_GATE_REPORT.md  MVP004_FOLLOWUP_FAILED_QUESTION_CLOSEOUT.md  MVP005_CLOSURE_SUMMARY.md  MVP005_EMBEDDING_STRATEGY.md  MVP005_IMPLEMENTATION_PLAN.md  MVP005_PHASE1_CLOSURE_SUMMARY.md  MVP005_PHASE2_CLOSURE_SUMMARY.md  MVP005_PHASE3_CLOSURE_SUMMARY.md  MVP005_PHASE4_CLOSURE_SUMMARY.md  MVP005_PHASE5_NEXT_STEP.md  (+100 more)
eval/: REGRESSION_TRACKING.md  expected_sources.jsonl  golden_agent_queries.jsonl  retrieval_questions.jsonl  skill_canary_cases_v1.jsonl  skill_canary_expectations_v1.jsonl  skill_routing_cases_v2.jsonl  skill_routing_expectations_v2.jsonl  v1_10b_answer_sample_manifest.jsonl  v1_11b_representative_biology_compliance_dev.jsonl  v1_11b_representative_biology_compliance_dev.schema.json  v1_11b_representative_biology_compliance_dev_manifest.json  v1_7c_biology_compliance_golden_set.jsonl  v1_7c_biology_compliance_labels.schema.json  v1_8b_generated_answer_scoring_cases.jsonl
scripts/: ask_agent.py  ask_asperitas_agent.py  audit_chunk_sections.py  audit_metadata_integrity.py  audit_workflow_artifacts.py  backfill_v1_3b_source_coverage.py  build_eval_manifest.py  build_evidence_pack.py  calibrate_v1_3b_retrieval_quality.py  check_evidence_guardrail.py  check_v1_2_answer_quality_baseline.py  check_v1_3c_answer_contract.py  check_v1_3d_truth_compliance_router.py  check_v1_4b_token_context_compression.py  check_v1_4c_latency_eval_harness_caching.py  check_v1_4d_answer_boilerplate_trimming.py  check_v1_4e_final_optimization_closeout.py  check_v1_mvp_performance_pack.py  check_v1_p0_p1_gap_fix.py  check_v1_performance_closure_matrix.py  check_v1_release_readiness.py  check_v1_stage_gate_scope.py  diagnose_v1_3a_retrieval_quality.py  eval_harness_cache.py  evaluate_agent.py  evaluate_skill_canary.py  evaluate_skill_routing.py  evaluate_v1_8b_offline_answer_scoring.py  generate_eval_report.py  generate_grounded_answer.py  inspect_workflow_run.py  measure_v1_4_cost_latency_token_baseline.py  plan_agent_workflow.py  pre_mvp014_manual_runtime_gate.ps1  record_failure_log.py  report_v1_10b_answer_sample_results.py  run_agent_workflow.py  run_eval_regression_gate.py  run_evalos_v09.py  run_evalos_v14_shadow.py  (+19 more)
tests/: test_agent_e2e_regression.py  test_agent_eval_harness.py  test_agent_runner.py  test_answer_generation.py  test_answer_verification_integration.py  test_ask_agent_cli.py  test_audit_trace.py  test_benchmark_db_pack.py  test_benchmark_workflow.py  test_benchmark_workflow_preflight.py  test_chat_workflow.py  test_chunk_section_audit.py  test_chunking.py  test_claim_extractor.py  test_claim_verification_adversarial_security.py  test_claim_verification_biology_compliance_golden_set.py  test_claim_verification_metrics_regression_gate.py  test_claim_verification_report_aggregator.py  test_claim_verifier_schema.py  test_cli_registry_contract.py  test_compliance.py  test_embedding_records.py  test_embeddings.py  test_eval_artifacts.py  test_eval_manifest.py  test_eval_metrics.py  test_eval_regression_gate.py  test_eval_report.py  test_evalos_v09.py  test_evalos_v14_repository_integration.py  test_evalos_v14_shadow_unit.py  test_evidence_pack.py  test_evidence_span_matcher.py  test_external_benchmark_registry.py  test_failure_log.py  test_failure_taxonomy.py  test_golden_agent_eval.py  test_guardrails.py  test_hybrid_scoring.py  test_ingestion_mvp002.py  (+60 more)
(+313 files in other folders)
