[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "asperitas-agent"
version = "0.1.0"
description = "Asperitas source-grounded compliance-aware RAG core MVP-001"
requires-python = ">=3.10"
dependencies = []

[project.optional-dependencies]
dev = ["pytest"]
parsers = ["pypdf", "python-docx"]

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
addopts = "-p no:cacheprovider --basetemp=.pytest_tmp"
testpaths = ["tests"]
pythonpath = ["src"]
